syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;

option go_package = "./proto";

message Note {
  string id = 1;
  string name = 2;
  string type = 3;
  bytes secret_data = 4;
}

message NoteRequest{
  string email = 1;
  string id_note = 2;
}

message NoteList{
  repeated Note notes = 1;
}

message User {
  string username = 1;
  string password = 2;
  string email = 3;
}

message JwtToken {
  string token = 1;
}

service NoteServices{
  rpc AddNote(Note) returns (google.protobuf.Empty);
  rpc DeleteNote(NoteRequest) returns (google.protobuf.Empty);
  rpc UpdateNote(Note) returns (google.protobuf.Empty);
  rpc GetNotes(NoteRequest) returns (NoteList);
}

service UserServices{
  rpc Register(User) returns (JwtToken);
  rpc Login(User) returns (JwtToken);
}